--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dafa95">  <td>20/03/21 02:07:10</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TellUsAboutYourSelf.beforeTest()[pri:0, instance:Titan.DealerAppraisalPT.TestCase.TellUsAboutYourSelf@7c29daf3]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@55331187</td>   <td></td> </tr>
-<tr bgcolor="dafa95">  <td>20/03/21 02:07:30</td>   <td>20376</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TellUsAboutYourSelf.f()[pri:0, instance:Titan.DealerAppraisalPT.TestCase.TellUsAboutYourSelf@7c29daf3]">f</td> 
-  <td>main@55331187</td>   <td></td> </tr>
-<tr bgcolor="dafa95">  <td>20/03/21 02:07:35</td>   <td>24850</td> <td>&nbsp;</td><td title="&lt;&lt;TellUsAboutYourSelf.afterTest()[pri:0, instance:Titan.DealerAppraisalPT.TestCase.TellUsAboutYourSelf@7c29daf3]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@55331187</td>   <td></td> </tr>
+<tr bgcolor="a794e5">  <td>20/03/21 10:50:07</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TellUsAboutYourSelf.beforeTest()[pri:0, instance:Titan.DealerAppraisalPT.TestCase.TellUsAboutYourSelf@55a561cf]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1014166943</td>   <td></td> </tr>
+<tr bgcolor="a794e5">  <td>20/03/21 10:50:25</td>   <td>18164</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TellUsAboutYourSelf.f()[pri:0, instance:Titan.DealerAppraisalPT.TestCase.TellUsAboutYourSelf@55a561cf]">f</td> 
+  <td>main@1014166943</td>   <td></td> </tr>
+<tr bgcolor="a794e5">  <td>20/03/21 10:50:27</td>   <td>20290</td> <td>&nbsp;</td><td title="&lt;&lt;TellUsAboutYourSelf.afterTest()[pri:0, instance:Titan.DealerAppraisalPT.TestCase.TellUsAboutYourSelf@55a561cf]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1014166943</td>   <td></td> </tr>
 </table>
